--- a/MyApp/Views/Product/Create.cshtml
+++ b/MyApp/Views/Product/Create.cshtml
@@ -1,9 +1,144 @@
-﻿
+﻿@model MyApp.Models.UserViewModels
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = Resource.AddNewProduct;
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Active = 7;
 }
 
+<style>
+    .table-borderless tr, td, th {
+        border: none !important;
+        vertical-align: middle!important;
+    }
+
+    .callout-success{
+        margin-bottom: 0px!important;
+    }
+
+    .w-100{
+        width: 100%!important;
+    }
+</style>
+
+        <!-- Custom Tabs -->
+        <div class="nav-tabs-custom">
+            <ul class="nav nav-tabs">
+                <li class="active"><a href="#tab_1" data-toggle="tab">@Resource.Product </a></li>
+                <li><a href="#tab_2" data-toggle="tab">@Resource.Unit @Resource.Price</a></li>
+                <li><a href="#tab_3" data-toggle="tab">@Resource.FileAttachment</a></li>
+                @*<li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                        Dropdown <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Action</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Another action</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Something else here</a></li>
+                        <li role="presentation" class="divider"></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Separated link</a></li>
+                    </ul>
+                </li>*@
+                <li class="pull-right"><a href="#" class="text-muted"><i class="fa fa-gear"></i></a></li>
+            </ul>
 
 
+            <form class="form-horizontal">
+                <!-- Content -->
+                <div class="tab-content">
+                    <div class="tab-pane active" id="tab_1">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <!-- /.box-header -->
+                                <!-- form start -->
+
+                                <div class="box-body">
+                                    <div class="form-group">
+                                        <label class="col-sm-3 control-label">@Resource.Code</label>
+                                        <div class="col-sm-4">
+                                            <input type="email" class="form-control" id="inputEmail3" placeholder=@Resource.Code>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="col-sm-3 control-label">@Resource.Name</label>
+                                        <div class="col-sm-9">
+                                            <input type="password" class="form-control" id="inputPassword3" placeholder=@Resource.Name >
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="col-sm-3 control-label">@Resource.Type</label>
+                                        <div class="col-sm-4">
+                                            <input type="email" class="form-control" id="inputEmail3" placeholder=@Resource.Type >
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="col-sm-3 control-label">@Resource.Description</label>
+                                        <div class="col-sm-9">
+                                            <textarea class="form-control" rows="4" placeholder=@Resource.Description ></textarea>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- /.box-body -->
+                                <div class="box-footer">
+                                    <button type="submit" class="btn btn-default">Cancel</button>
+                                    <button type="submit" class="btn btn-info pull-right">Sign in</button>
+                                </div>
+                                <!-- /.box-footer -->
+
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /.tab-pane -->
+                    <div class="tab-pane" id="tab_2">
+                        <div class="callout callout-success">
+                            <p id="callOutHeader">Set Price of Product by its unit.</p>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                @Html.React("TblUnitOfProduct", new { id = "12", listUnit = "" })
+                             </div>
+                        </div>
+                    </div>
+                    <!-- /.tab-pane -->
+                    <div class="tab-pane" id="tab_3">
+
+                    </div>
+                </div>
+            </form>
+        </div>
+
+
+<!-- Place these at the end of the page -->
+
+@section scripts{
+    
+<script src="@Url.Content("~/JSX/TblUnitOfProduct.jsx")"></script>
+@Html.ReactInitJavaScript()
+
+    <script type="text/javascript">
+        
+         
+
+        $(document).ready(function () {
+            $('.select2').select2();
+        });
+
+
+        function AddRow(row) {
+            checkRow(row, function () {
+
+            })
+        }
+
+        function RemoveRow(row) {
+
+        }
+
+        function checkRow(row, callBack) {
+            alert(444);
+            callBack();
+        }
+
+    </script>
+    
+    
+    }
